# Hierarchical-Localization

./: .gitignore  capture_frames.py  live_localization.py  localize_queries_v1.py  localize_single_fast.py  localize_single_ultrafast.py  pyproject.toml
plans/: telemetry.md
static/: splat_viewer.html
